# nix-tree

./: .gitignore  README.md  css.css  custom_types.py  decomposer.py  errors.py  flake.nix  help_screens.py  main.py  parsing.py  pyproject.toml  requirements.txt  setup.py  stack.py  stacks.py  test.py  tree.py  ui.py
.github/workflows/: python-app.yml
nix-tree/: __main__.py  composer.py  css.css  custom_types.py  decomposer.py  errors.py  help_screens.py  main.py  parsing.py  section_screens.py  tree.py  ui.py  variable_screens.py
nix_tree/: __main__.py  composer.py  css.css  custom_types.py  decomposer.py  errors.py  help_screens.py  parsing.py  section_screens.py  stacks.py  tree.py  ui.py  variable_screens.py
tests/: test_comment_collecting.py  test_exceptions.py  test_individual_functions.py  test_tree_building.py
tests/example_configurations/: pms_example_config.nix  random.nix  shortened_default.nix  yasu_example_config.nix
